Sign up functionality
Now it is possible to create users on sign up page

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,6 +6,14 @@
 
 <br />
 
+{% if error %}
+
+<div class="alert alert-danger" role="alert">
+  {{ error }}
+</div>
+
+{% endif %}
+
 <form method="POST" action="{% url 'signup' %}">
 {% csrf_token %}
   <p>Username:</p>
