--- a/producthunt/templates/base.html
+++ b/producthunt/templates/base.html
@@ -22,21 +22,26 @@
 
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="{% url 'home' %}">
             <img src="{% static 'logo.png' %}" class="d-inline-block align-top"/>
             Product Hunt</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="">Sign Up <span class="sr-only">(Sign Up)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-            </ul>
+            <div class="navbar-nav mr-auto">
+              {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}" onclick="">Logout</a>
+              <form id="logout" method="POST" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <input type="hidden"/>
+              </form>
+              {% else %}
+                <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up <span class="sr-only">(Sign Up)</span></a>
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+              {% endif %}
+
+            </div>
           </div>
         </div>
       </nav>
