--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -16,7 +16,17 @@
     <img src="{{ product.image.url }}" class="img-fluid"/>
   </div>
   <div class="col-4">
-    <a href=""><button class="btn btn-primary btn-lg btn-block"><span class="oi oi-caret-top"></span> Upvote {{ product.votes_total }}</button></a>
+    {% if error %}
+
+    <button class="btn btn-primary btn-lg btn-block" disabled><span class="oi oi-caret-top"></span> Upvote {{ product.votes_total }}</button>
+    <p class="text-center">
+      <small>{{ error }}</small>
+    </p>
+
+    {% else %}
+    <a href="javascript:{document.getElementById('upvote').submit()}"><button class="btn btn-primary btn-lg btn-block"><span class="oi oi-caret-top"></span> Upvote {{ product.votes_total }}</button></a>
+
+    {% endif %}
   </div>
 </div>
 
@@ -33,7 +43,11 @@
   <div class="col-8">
     <p> {{ product.body }}</p>
   </div>
-
 </div>
+
+<form id="upvote" method="POST" action="{% url 'upvote' product.id %}">
+  {% csrf_token %}
+  <input type="hidden" />
+</form>
 
 {% endblock %}
