--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1><i>Login!</i></h1>
-
+<small>or you can sign up <a href="{% url 'signup' %}">here</a> if you do not have an account</small></small>
 <br />
 
 {% if error %}
